--- a/index.html
+++ b/index.html
@@ -14,25 +14,25 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Medula+One&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="../src/css/style.css">
+  <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 <body>
   <header class="header">
     <nav class="nav">
       <div class="div__nav">
-        <img class="img__nav" src="../src/img/Group 2.png" alt="">
+        <img class="img__nav" src="./assets/img/Group 2.png" alt="">
         <a class="a__nav">login</a>
       </div>
       <div class="div__nav2">
         <div class="div__nav3">
-          <img class="img__nav2" src="../src/img/logo_sneakerschange_branco_Prancheta 1 1.png" alt="Logo Sneacker Change">
+          <img class="img__nav2" src="./assets/img/logo_sneakerschange_branco_Prancheta 1 1.png" alt="Logo Sneacker Change">
       </div>
     </div>
     </nav>
   </header>
   <main class="main">
     <div class="div__main2">
-      <img class="img__main2" src="../src/img/Group 15.png" alt="">
+      <img class="img__main2" src="./assets/img/Group 15.png" alt="">
       <input type="radio" class="radio__main" name="slide" checked/>
       <input type="radio" class="radio__main" name="slide"/>
       <input type="radio" class="radio__main" name="slide"/>
@@ -40,26 +40,26 @@
       <div class="div__main3">
         <ul class="div2__main3">
           <li class="slide">
-            <img class="img2__main2" src="../src/img/image 1.png" alt="">
+            <img class="img2__main2" src="./assets/img/image 1.png" alt="">
           </li>
           <li class="slide">
-            <img class="img2__main2" src="../src/img/image 1.png" alt="">
+            <img class="img2__main2" src="./assets/img/image 1.png" alt="">
           </li>
           <li class="slide">
-            <img class="img2__main2" src="../src/img/image 3.png" alt="">
+            <img class="img2__main2" src="./assets/img/image 3.png" alt="">
           </li>
           <li class="slide">
-            <img class="img2__main2" src="../src/img/image 3.png" alt="">
+            <img class="img2__main2" src="./assets/img/image 3.png" alt="">
           </li>
         </ul>
         </div>
-        <img class="img3__main2" src="../src/img/image 2.png" alt="">
+        <img class="img3__main2" src="./assets/img/image 2.png" alt="">
     </div>
   </main>
   <aside class="aside">
     <section class="section__aside">
       <div class="div__aside">
-        <img src="../src/img/Group 59 (1).png" alt="">
+        <img src="./assets/img/Group 59 (1).png" alt="">
       </div>
     </section>
     <section class="section__aside2">
@@ -69,8 +69,8 @@
           A Sneakerschange nasceu para suprir a vontade de ter sneakers únicos, clássicos e raros. Aqui você pode comprar, vender e trocar...acredite, trocar sneakers com outros malucos como você!Agora é a hora de aproveitar, manda brasa!</p>
       </div>
       <div class="div2__aside2">
-        <img class="img__aside2" src="../src/img/logo_vertical_preto 1.png" alt="">
-        <img class="img2__aside2" src="../src/img/Group.png" alt="">
+        <img class="img__aside2" src="./assets/img/logo_vertical_preto 1.png" alt="">
+        <img class="img2__aside2" src="./assets/img/Group.png" alt="">
       </div>
     </section>
   </aside>
@@ -79,6 +79,6 @@
       <p class="p__footer">@sneakerschange</p>
     </div>
   </footer>
-  <script src="../src/js/main.js"></script>
+  <script src="./assets/js/main.js"></script>
 </body>
 </html>
