--- a/index.html
+++ b/index.html
@@ -21,13 +21,19 @@
     <nav class="nav">
       <div class="div__nav">
         <img class="img__nav" src="./assets/img/Group 2.png" alt="">
-        <a class="a__nav">login</a>
+        <ul class="ul__nav3">
+          <li class="li__ul"><a> Projeto</li>
+            <li class="li__ul">Venda e Troca</a></li>
+            <li class="li__ul"><a>Encontre seu estilo</a></li>
+            <li class="li__ul"><a>Equipe</a></li>
+          </ul>
+          <a class="a__nav">login</a>
       </div>
       <div class="div__nav2">
         <div class="div__nav3">
-          <img class="img__nav2" src="./assets/img/logo_sneakerschange_branco_Prancheta 1 1.png" alt="Logo Sneacker Change">
+          <a href="#"><img class="img__nav2" src="./assets/img/logo_sneakerschange_branco_Prancheta 1 1.png" alt="Logo Sneacker Change"></a>
       </div>
-    </div>
+      
     </nav>
   </header>
   <main class="main">
