Adicionando pagina login com save funcionando

--- a/login.html
+++ b/login.html
@@ -14,7 +14,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Medula+One&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="./assets/css/style.css">
+  <link rel="stylesheet" href="./assets/css/style__logn.css">
 </head>
 <body>
   <header class="header">
@@ -33,53 +33,35 @@
         <div class="div__nav3">
           <a href="#"><img class="img__nav2" src="./assets/img/logo_sneakerschange_branco_Prancheta 1 1.png" alt="Logo Sneacker Change"></a>
       </div>
-      
     </nav>
   </header>
   <main class="main">
-    <div class="div__main2">
-      <img class="img__main2" src="./assets/img/Group 15.png" alt="">
-      <input type="radio" class="radio__main" name="slide" checked/>
-      <input type="radio" class="radio__main" name="slide"/>
-      <input type="radio" class="radio__main" name="slide"/>
-      <input type="radio" class="radio__main" name="slide"/>
-      <div class="div__main3">
-        <ul class="div2__main3">
-          <li class="slide">
-            <img class="img2__main2" src="./assets/img/image 1.png" alt="">
-          </li>
-          <li class="slide">
-            <img class="img2__main2" src="./assets/img/image 1.png" alt="">
-          </li>
-          <li class="slide">
-            <img class="img2__main2" src="./assets/img/image 3.png" alt="">
-          </li>
-          <li class="slide">
-            <img class="img2__main2" src="./assets/img/image 3.png" alt="">
-          </li>
-        </ul>
+    <h3 class="h3__main">Login</h3>
+    <img class="img__main" src="./assets/img/Group 60.png" alt="">
+    <form action="" class="form">
+      <div class="div__form">
+        <label for="email" class="email">Email<br></label>
+        <input type="email" placeholder="max@teste.com.br" id="email">
+      </div>
+      <div class="div__form2">
+        <label for="password" class="password">Password<br></label>
+        <input type="password" placeholder="********" id="password">
+      </div>
+      <div class="div__form3">
+        <div class="div__div">
+          <input type="checkbox" id="botao" class="botao botaozin"></input>
+          <label class="p__botao" for="botao"></label>
+          <p class="save">Save me</p>
         </div>
-        <img class="img3__main2" src="./assets/img/image 2.png" alt="">
-    </div>
+        <p class="senha">Forgot your password?</p>
+      </div>
+      <button class="botao__login">Login</button>
+      <div class="login">
+        <button class="botao__login2">Or log in with</button>
+        <img class="img__login" src="./assets/img/Group 5.png" alt="">
+      </div>
+    </form>
   </main>
-  <aside class="aside">
-    <section class="section__aside">
-      <div class="div__aside">
-        <img src="./assets/img/Group 59 (1).png" alt="">
-      </div>
-    </section>
-    <section class="section__aside2">
-      <div class="div__aside2">
-        <h3 class="h3__aside2">O projeto</h3>
-        <p class="p__aside2"><strong>Sneakerheads uni-vos!</strong><br>
-          A Sneakerschange nasceu para suprir a vontade de ter sneakers únicos, clássicos e raros. Aqui você pode comprar, vender e trocar...acredite, trocar sneakers com outros malucos como você!Agora é a hora de aproveitar, manda brasa!</p>
-      </div>
-      <div class="div2__aside2">
-        <img class="img__aside2" src="./assets/img/logo_vertical_preto 1.png" alt="">
-        <img class="img2__aside2" src="./assets/img/Group.png" alt="">
-      </div>
-    </section>
-  </aside>
   <footer class="footer">
     <div class="div__footer">
       <p class="p__footer">@sneakerschange</p>
