Terminando as ultimas paginas

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <img class="img__nav" src="./assets/img/Group 2.png" alt="">
         <ul class="ul__nav3">
           <li class="li__ul"><a> Projeto</li>
-            <li class="li__ul">Venda e Troca</a></li>
+            <li class="li__ul"><a href="./venda.html">Venda e Troca</a></a></li>
             <li class="li__ul"><a>Encontre seu estilo</a></li>
             <li class="li__ul"><a>Equipe</a></li>
           </ul>
