--- a/login.html
+++ b/login.html
@@ -22,7 +22,7 @@
       <div class="div__nav">
         <img class="img__nav" src="./assets/img/Group 2.png" alt="">
         <ul class="ul__nav3">
-          <li class="li__ul"><a> Projeto</li>
+          <li class="li__ul"><a href="./index.html"> Projeto</a></li>
             <li class="li__ul">Venda e Troca</a></li>
             <li class="li__ul"><a>Encontre seu estilo</a></li>
             <li class="li__ul"><a>Equipe</a></li>
@@ -49,13 +49,13 @@
       </div>
       <div class="div__form3">
         <div class="div__div">
-          <input type="checkbox" id="botao" class="botao botaozin"></input>
+          <input type="checkbox" id="botao" class="botao  botaozin"></input>
           <label class="p__botao" for="botao"></label>
           <p class="save">Save me</p>
         </div>
         <p class="senha">Forgot your password?</p>
       </div>
-      <button class="botao__login">Login</button>
+      <button class="botao__login"><a href="./index.html">Login</a></button>
       <div class="login">
         <button class="botao__login2">Or log in with</button>
         <img class="img__login" src="./assets/img/Group 5.png" alt="">
